updating to use .bat instead of .sh